--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
-
 # FaunaDB
 FAUNADB_KEY=
 
-#Stripe
+# Stripe
 STRIPE_API_KEY=
+STRIPE_PRICE_ID=
+
+# Github
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
