--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "faunadb": "^4.2.0",
     "next": "10.1.3",
     "next-auth": "^3.17.2",
+    "node-jose-tools": "^1.6.28",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
