--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# App Variables
+NEXTAUTH_URL=http://localhost:3000
+
 # FaunaDB
 FAUNADB_KEY=
 
@@ -8,3 +11,6 @@ STRIPE_PRICE_ID=
 # Github
 GITHUB_CLIENT_ID=
 GITHUB_CLIENT_SECRET=
+
+# JWT
+JWT_SIGNING_PRIVATE_KEY=
